--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
       </header>
 
-      <form>
+      <form name="kontakt" netlify>
         <!-- Formular-indhold -->
         <div class="form-felt">
           <h3>Her er en formel.</h3>
